--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <header>
             <h2 class="logo">HPSH Mock Economy</h2>
             <nav class="navigation">
-                <button class="nav-buttons" id="currencies-button" onclick="window.location.href='/currencies/currencies.html';">Currencies</button>
-                <button class="nav-buttons" id="exchanges-button" onclick="window.location.href='/exchanges/exchanges.html';">Exchanges</button>
-                <button class="nav-buttons" id="investments-button" onclick="window.location.href='/investments/investments.html';">Investments</button>
-                <button class="nav-buttons" id="market-button" onclick="window.location.href='/market/market.html';">Market</button>
+                <button class="nav-buttons" id="currencies-button" onclick="window.location.href='./currencies/currencies.html';">Currencies</button>
+                <button class="nav-buttons" id="exchanges-button" onclick="window.location.href='./exchanges/exchanges.html';">Exchanges</button>
+                <button class="nav-buttons" id="investments-button" onclick="window.location.href='./investments/investments.html';">Investments</button>
+                <button class="nav-buttons" id="market-button" onclick="window.location.href='./market/market.html';">Market</button>
             </nav>
         </header>
         <footer>
