--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </nav>
         </header>
         <footer>
-            <button id="admin-button" onclick="window.location.href='../admin/admin.html';">Admin</button>
+            <button id="admin-button" onclick="window.location.href='./admin/admin.html';">Admin</button>
             <div class="admin-only"><b>*</b></div>
         </footer>
         <script src="script.js"></script>
