--- a/exchanges/exchanges.html
+++ b/exchanges/exchanges.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1 id="pageTitle">Exchanges</h1>
-        <button id="returnHome" onclick="window.location.href='../home/index.html';">Home</button>
+        <button id="returnHome" onclick="window.location.href='../index.html';">Home</button>
     </header>
     <div class="admin-only" id="admin-ticker"><b>*</b></div>
     <script src="exchanges-script.js"></script>
