--- a/currencies/currencies.html
+++ b/currencies/currencies.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1 id="pageTitle">Currencies</h1>
-        <button id="returnHome" onclick="window.location.href='../';">Home</button>
+        <button id="returnHome" onclick="window.location.href='../../';">Home</button>
     </header>
     <section class="currency">
         <h2 id="dollarAmount"></h2>
