--- a/admin/admin.html
+++ b/admin/admin.html
@@ -22,8 +22,8 @@
         <button id="enterButton">Login</button>
     </div>
 
-    <script src="exchanges-script.js"></script>
+    <!--<script src="exchanges-script.js"></script>-->
     
-    <script src="admin-script.js"></script>
+    <script src="./admin-script.js"></script>
 </body>
 </html>
