--- a/admin/admin.html
+++ b/admin/admin.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1 id="pageTitle">Admin</h1>
-        <button id="returnHome" onclick="window.location.href='../../';">Home</button>
+        <button id="returnHome" onclick="window.location.href='../../index.html';">Home</button>
     </header>
     <div class="password-input" id="enter-pass">
         <h4>Enter password: </h4>
